progresing in the course, just ended the sec 18 of npm

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #9D50BB;
+$secondary-color: #6E48AA;
 
 $white-color: #fff;
 
